--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha1'
 }
